--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "fs": "^0.0.1-security",
+    "morgan": "^1.10.0",
+    "path": "^0.12.7",
+    "uuid": "^9.0.0"
   }
 }
