--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "uuid": "^9.0.0"
